made minor ui adjustments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/font.css">
+  <title>Johnny Liaw</title>
 </head>
 <body>
     <div id="content">
@@ -18,10 +19,10 @@
         </div>
         <div id="paragraphs">
             <p id="greeting">¡Hola! 👋</p>
-            <p>Currently I'm a Software Enginer @ <a href="http://alexsolutions.com.au/">Alex Solutions</a></p>
-            <p>Before that I was a Deep Learning Researcher @ <a href="www.deepneuron.org">Monash DeepNeuron</a></p>
-            <p>I also built Mars Rovers @ <a href="https://www.novarover.space/">Monash Nova Rover</a></p>
-            <p>Basically, I'm pretty tech agnostic and I've worked on a lot of things, especially space and tech</p>
+            <p>Currently I'm a Software Enginer @ <a target="_blank" href="http://alexsolutions.com.au/">Alex Solutions</a></p>
+            <p>Before that I was a Deep Learning Researcher @ <a target="_blank" href="https://www.deepneuron.org">Monash DeepNeuron</a></p>
+            <p>I also built Mars Rovers @ <a target="_blank" href="https://www.novarover.space/">Monash Nova Rover</a></p>
+            <p>Basically, I'm pretty tech agnostic and I enjoy working on a lot of things, especially space and tech</p>
             <p>I'm bored and I want the world to be less boring, so throw any challenge you've got at me</p>
             <div id="footer">
                 <a href="https://github.com/johnny-liaw" target="_blank"><i data-feather="github"></i></a>
