--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p>I also built Mars Rovers @ <a target="_blank" href="https://www.novarover.space/">Monash Nova Rover</a></p>
             <p>Basically, I'm pretty tech agnostic and I enjoy working on a lot of things, especially space and tech</p>
             <p>I'm bored and I want the world to be less boring, so throw any challenge you've got at me</p>
+            <p id="greeting">Ad Astra 🚀</p>
             <div id="footer">
                 <a href="https://github.com/johnny-liaw" target="_blank"><i data-feather="github"></i></a>
                 <a href="https://twitter.com/johnnyliaw121" target="_blank"><i data-feather="twitter"></i></a>
