--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/font.css">
+  <link rel="icon" href="assets/font/favicon/favicon-32x32.png">
   <title>Johnny Liaw</title>
 </head>
 <body>
