--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="paragraphs">
             <p id="greeting">¡Hola! 👋</p>
-            <p>Currently I'm a Software Enginer @ <a target="_blank" href="http://alexsolutions.com.au/">Alex Solutions</a></p>
+            <p>Currently I'm a Software Engineer @ <a target="_blank" href="http://alexsolutions.com.au/">Alex Solutions</a></p>
             <p>Before that I was a Deep Learning Researcher @ <a target="_blank" href="https://www.deepneuron.org">Monash DeepNeuron</a></p>
             <p>I also built Mars Rovers @ <a target="_blank" href="https://www.novarover.space/">Monash Nova Rover</a></p>
             <p>Basically, I'm pretty tech agnostic and I enjoy working on a lot of things, especially space and tech</p>
